@@ -1,3 +1,12 @@
+2004-07-14 Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* src/Makefile.am:
+	* src/mod_mono.c:
+	* src/mod_mono.h: moved conditional cruft to a header file. Fixed note
+	on default value for MonoRunXSP. NOT_FOUND is defined in apache 1.3, so
+	changed it to MYNOT_FOUND. Removed a few simple functions. In short,
+	shuffling code.
+
 2004-07-13 Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
 	* src/mod_mono.c: ap_conn_flush does a *final* flush on the connection,
